Fixed an issue with the btn height being cut off when using collapse

--- a/includes/btn.styl
+++ b/includes/btn.styl
@@ -133,6 +133,7 @@ btn()
       transition: height 0.35s ease
       &.{$showClass}
         display: block
+        height: auto
 
       /
         tr
